//
//  ProfileViewController.swift
//  ImageFeed
//
//  Created by Андрей Чупрыненко on 07.09.2023.
//

import UIKit

final class ProfileViewController: UIViewController {
    @IBOutlet weak var avatarImage: UIImageView!
    
    @IBOutlet weak var descriptionLable: UILabel!
    
    @IBOutlet weak var loginLableName: UILabel!
    
    @IBOutlet weak var nameLable: UILabel!
    
    @IBOutlet weak var logoutButton: UIButton!
    
    @IBAction func didTapLogoutButton() {
    }
    
    
}
